Fixed image stretching in post header

--- a/src/components/post/Post.scss
+++ b/src/components/post/Post.scss
@@ -45,6 +45,8 @@
             height: 40px;
             aspect-ratio: 1;
             border-radius: 50%;
+            object-fit: cover;
+            object-position: center;
             &:hover {
                 filter: brightness(95%);
             }
